refactor: remove the primary color option from the button component

--- a/src/pages/design-system.astro
+++ b/src/pages/design-system.astro
@@ -598,19 +598,8 @@ import { Tooltip } from "../components/atoms/Tooltip";
                             <div
                                 class="flex flex-wrap gap-4 p-6 rounded-lg bg-secondary border border-ui-border"
                             >
-                                <Button
-                                    client:load
-                                    variant="solid"
-                                    color="accent"
-                                >
+                                <Button client:load variant="solid">
                                     Accent
-                                </Button>
-                                <Button
-                                    client:load
-                                    variant="solid"
-                                    color="primary"
-                                >
-                                    Primary
                                 </Button>
                                 <Button
                                     client:load
@@ -759,13 +748,6 @@ import { Tooltip } from "../components/atoms/Tooltip";
                                     color="accent"
                                 >
                                     Accent
-                                </Button>
-                                <Button
-                                    client:load
-                                    variant="link"
-                                    color="primary"
-                                >
-                                    Primary
                                 </Button>
                                 <Button
                                     client:load
