--- a/src/components/atoms/Modal/Modal.css
+++ b/src/components/atoms/Modal/Modal.css
@@ -1,3 +1,5 @@
+/*this file only styles the color and the animation of the <dialog>*/
+
 .modal-dialog {
     background-color: var(--color-secondary);
     color: var(--color-fg-main);
